--- a/sales.html
+++ b/sales.html
@@ -8,18 +8,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
+<tbody>
+  <table id="cookieslocation">
 
-  <body class="sales">
-    <h1>Daily sales</h1>
-    <div class="cookie_locations">
-      <ul id="cookies_list"></ul>
-      <ul id="seatac_airport"></ul>
-      <ul id="seattle_center"></ul>
-      <ul id="capitol_hill"></ul>
-      <ul id="alki"></ul>
-    </div>
-    <script src="app.js" ></script>
-  </body>
+  </table>
+</body>
 
 
+<script src="app.js"></script>
 </html>
