--- a/sales.html
+++ b/sales.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-
-  <head>
+<head>
     <meta charset="utf-8">
     <title>chay</title>
     <link rel="stylesheet" href="style.css">
-  </head>
+</head>
 
-<tbody>
-  <table id="cookieslocation">
+<body>
 
-  </table>
+    <table id="cookieslocation"></table>
+    <script src="app.js"></script>
+
 </body>
 
-
-<script src="app.js"></script>
 </html>
