--- a/index.html
+++ b/index.html
@@ -10,76 +10,111 @@
 </head>
 
 
-<body class="salon_body_page">
+<body class="salmon_body_page">
+
+
     <header>
+        <ul id="navigation">
+            <li> <a href="">Home</a> </li>
+            <li> <a href=""> About Us</li>
+        <li> <a href="">Our Menus</a></li>
+            <li> <a href="">Reservation</a></li>
+            <li> <a href="">Contact Us</a></li>
+        </ul>
         <img id="salmon_pic" src="./images/salmon.png" alt="">
         <h1>Welcome To Pat's Salmon Cookies</h1>
     </header>
 
 
-    <section>
-        <div class="salmon_intro">
-            <h3>The Salmon cookie</h3>
-            <p>You have never tasted Salmon like this, more than just healthy, deeeelicous! </p>
-            <p>Our cookies are made from the freshest Salmon delevred each morning!</p>
+    <hr>
+    <section class="aboutUs">
+        <div>
+            <img id="familyPic" src="./images/family.jpg" alt="">
         </div>
-        <div class="nutrition">
-            <h3>Nutrition Facts</h3>
-            <ul>
-                <li>Amount Per cookie (10g)</li>
-                <li>Calories 20</li>
-                <li>Total Fat 2g</li>
-                <li>Vitamin A, Calcium</li>
-                <li>Vitamin D, Vitamin B-12</li>
-                <li>Iron, Magnesium</li>
-            </ul>
+        <div class="context">
+            <h1 class="title">About us</h1>
+            <hr>
+            <p> It all started with an old family recipie, we though we are the only ones that would like salmon cookies, we thought that it was in the blood, but we were wrong. Five locations around Seattle sell our cookies and it has proven that we are
+                not the only one. </p>
+            <img src="./images/fish.jpg" alt="">
         </div>
-        <img id="cookie" src="./images/salmoncookie.jpg" alt="">
+    </section>
+
+
+    <hr>
+    <section class="myMenu">
+        <h1>Our menu</h1>
+        <div class="kidsMenu">
+            <h4>Kids menu</h4>
+            <img src="./images/frosted-cookie.jpg" alt="">
+            <p>Fresh and frosted <strong>10$</strong></p>
+        </div>
+        <div class="adultMenu">
+            <h4>Adult menus</h4>
+            <img src="./images/salmoncookie.jpg" alt="">
+            <p> Our classic Cookie<strong>15$</strong></p>
+        </div>
+    </section>
+
+
+    <section class="souvenir-shop">
+        <hr>
+        <h1>Souvenir shop</h1>
+        <img id="cuter" src="./images/cutter.jpeg" alt="">
+        <p>Cutter from Pat's salmon cookie <strong> 15$</strong></p>
+        <img id="shirt" src="./images/shirt.jpg" alt="">
+        <p>Shirt souvenir from Pat's salmon cookie <strong>20$</strong></p>
     </section>
 
 
     <footer>
-        <div class="locations">
-            <h4>First and Pike location</h4>
-            <ul>
-                <li>Adress:2643 14th Avenue West, Seattle, WA 98119</li>
-                <li>Phone:302 603 3457</li>
-                <li>Store hours:6am-8pm</li>
-            </ul>
-        </div>
-        <div class="locations">
-            <h4>Seattle Center location</h4>
-            <ul>
-                <li>Adress:134543 18th Avenue West, Seattle, WA 98119</li>
-                <li>Phone:402 553 9457</li>
-                <li>Store hours:6am-8pm</li>
-            </ul>
-        </div>
-        <div class="locations">
-            <h4>SeaTac Airport</h4>
-            <ul>
-                <li>Adress:2501 Westview Dr Seattle, WA 98119</li>
-                <li>Phone:602 987 0000</li>
-                <li>Store hours:6am-8pm</li>
-            </ul>
-        </div>
-        <div class="locations">
-            <h4>Capitol Hill location</h4>
-            <ul>
-                <li>Adress:1215 W Wheeler St, Seattle, WA 98119</li>
-                <li>Phone:109 553 0957</li>
-                <li>Store hours:6am-8pm</li>
-            </ul>
-        </div>
-        <div class="locations">
-            <h4>Alki location</h4>
-            <ul>
-                <li>Adress:517 W Pleasant P Seattle, WA 98119</li>
-                <li>Phone:902 333 3127</li>
-                <li>Store hours:6am-8pm</li>
-            </ul>
+        <div class="fish-bg"></div>
+        <div class="footer-content">
+            <h1>Contact Us</h1>
+            <div class="locations">
+                <h4>First and Pike location</h4>
+                <ul>
+                    <li>Adress:2643 14th Avenue West, Seattle, WA 98119</li>
+                    <li>Phone:302 603 3457</li>
+                    <li>Store hours:6am-8pm</li>
+                </ul>
+            </div>
+            <div class="locations">
+                <h4>Seattle Center location</h4>
+                <ul>
+                    <li>Adress:134543 18th Avenue West, Seattle, WA 98119</li>
+                    <li>Phone:402 553 9457</li>
+                    <li>Store hours:6am-8pm</li>
+                </ul>
+            </div>
+            <div class="locations">
+                <h4>SeaTac Airport</h4>
+                <ul>
+                    <li>Adress:2501 Westview Dr Seattle, WA 98119</li>
+                    <li>Phone:602 987 0000</li>
+                    <li>Store hours:6am-8pm</li>
+                </ul>
+            </div>
+            <div class="locations">
+                <h4>Capitol Hill location</h4>
+                <ul>
+                    <li>Adress:1215 W Wheeler St, Seattle, WA 98119</li>
+                    <li>Phone:109 553 0957</li>
+                    <li>Store hours:6am-8pm</li>
+                </ul>
+            </div>
+            <div class="locations">
+                <h4>Alki location</h4>
+                <ul>
+                    <li>Adress:517 W Pleasant P Seattle, WA 98119</li>
+                    <li>Phone:902 333 3127</li>
+                    <li>Store hours:6am-8pm</li>
+                </ul>
+            </div>
         </div>
     </footer>
+
+
 </body>
 
 </html>
